# oak

./: .bazelrc  Cargo.toml  WORKSPACE
cc/transport/: grpc_streaming_transport.h
oak_attestation_verification/src/: verifier.rs
oak_containers/proto/: interfaces.proto
oak_containers_crypto/: Cargo.toml
oak_containers_hello_world_trusted_app/: Cargo.toml
oak_containers_hello_world_trusted_app/src/: main.rs
oak_containers_hello_world_untrusted_app/: Cargo.toml
oak_containers_hello_world_untrusted_app/tests/: integration_test.rs
oak_containers_launcher/: Cargo.toml
oak_containers_launcher/src/: lib.rs  qemu.rs
oak_containers_sdk/: build.rs
oak_containers_sdk/src/: crypto.rs  lib.rs
oak_containers_system_image/: BUILD
oak_functions_containers_app/: Cargo.toml
oak_functions_containers_app/src/: lib.rs  main.rs
oak_user_silo_trusted/: Cargo.toml  build.rs
oak_user_silo_trusted/container/: build_container_bundle
oak_user_silo_trusted/proto/: application_config.proto  t_oak_user_silo.proto
oak_user_silo_trusted/src/: lib.rs  main.rs  oak_user_silo.rs
proto/attestation/: expected_value.proto
