[package]
name = "oak_user_silo_trusted"
version = "0.1.0"
edition = "2021"

[build-dependencies]
oak_grpc_utils = { workspace = true }

[dependencies]
async-trait = { version = "*", default-features = false }
oak_crypto = { workspace = true }
oak_remote_attestation = { workspace = true }
anyhow = "*"
env_logger = "*"
log = "*"
prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "*", features = ["net"] }
tonic = { workspace = true }
async-stream = "*"
bytes = "*"
tower = "*"